@@ -450,6 +450,39 @@ class Abs(WeightedNode, evo.sr.Abs):
                                                 b=repr(self.bias[0]))
 
 
+class Sqrt(WeightedNode, evo.sr.Sqrt):
+    """Weighted version of :class:`evo.sr.Sqrt`\ .
+
+    .. seealso:: :class:`evo.sr.Sqrt`
+    """
+    def __init__(self, **kwargs):
+        super().__init__(**kwargs)
+
+    def derivative(self, arg_no: int, x):
+        old_err = numpy.geterr()
+        numpy.seterr(divide='ignore')
+        try:
+            return 0.5 * numpy.power(x[:, 0], -0.5)
+        finally:
+            numpy.seterr(**old_err)
+
+    def full_infix(self, **kwargs):
+        num_format = kwargs.get('num_format', '.3f')
+        if num_format == 'repr':
+            return 'abs({0} + {1} * {2})'.format(
+                repr(self.bias[0]), repr(self.weights[0]),
+                self.children[0].infix(**kwargs))
+        return ('abs({0:' + num_format + '} + '
+                '{1:' + num_format + '} * {2})').format(
+            self.bias[0], self.weights[0],
+            self.children[0].infix(**kwargs))
+
+    def to_matlab_expr(self, data_name='X', function_name_prefix='') -> str:
+        c = self.children[0].to_matlab_expr(data_name, function_name_prefix)
+        return 'abs({w} .* {arg} + {b})'.format(arg=c, w=repr(self.weights[0]),
+                                                b=repr(self.bias[0]))
+
+
 class Power(WeightedNode, evo.sr.Power):
     """Weighted version of :class:`evo.sr.Power`\ .
 
