@@ -7,6 +7,8 @@ v0.1.2
     * New features
 
         * Command line arguments are printed to stderr as the first thing.
+        * Sqrt node usable in backpropagation.
+        * Option to specify the function set.
 
     * Added info about installation directly from git to README.rst.
     * Added upgrade instructions to README.rst.
